force-app/main/default/objects/FNA_Product_Offering__c/FNA_Product_Offering__c.object-meta.xml
<CustomObject>
    <label>FNA Product Offering</label>
    <nameField>
        <displayFormat>OFFERING-{0000000000}</displayFormat>
        <label>FNA Product Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FNA Product Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>