force-app/main/default/objects/FNA_Product_Offering__c/fields/Flag_Highlight__c.field-meta.xml
<CustomField>
    <fullName>Flag_Highlight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Highlight</label>
    <type>Checkbox</type>
</CustomField>