force-app/main/default/objects/FNA_Product_Offering__c/fields/Flag_Interested_Product__c.field-meta.xml
<CustomField>
    <fullName>Flag_Interested_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Interested Product</label>
    <type>Checkbox</type>
</CustomField>