force-app/main/default/objects/FNA_Product_Offering__c/fields/Flag_Offset_product_holding__c.field-meta.xml
<CustomField>
    <fullName>Flag_Offset_product_holding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Offset product holding</label>
    <type>Checkbox</type>
</CustomField>