force-app/main/default/objects/FNA_Product_Offering__c/fields/FNA_Activity__c.field-meta.xml
<CustomField>
    <fullName>FNA_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FNA Activity</label>
    <referenceTo>FNA_Activity__c</referenceTo>
    <relationshipName>FNA_Product_Offering_objects</relationshipName>
    <type>Lookup</type>
</CustomField>