force-app/main/default/objects/FNA_Product_Offering__c/fields/FNA_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>FNA_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FNA Product Name</label>
    <referenceTo>FNA_Product_Mapping__c</referenceTo>
    <relationshipName>FNA_Product_Offering_objects</relationshipName>
    <type>Lookup</type>
</CustomField>