force-app/main/default/objects/FNA_Product_Offering__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>FNA_Product_Name__r.RTLProduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>