force-app/main/default/objects/FNA_Product_Offering__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>TEXT(FNA_Product_Name__r.Product__r.Product_Type__c)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>